# landing_page

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/: main.py
src/api/: routes.py
src/services/: telegram.py
src/static/css/: base.css  china_study.css  consultation_form.css  home.css  sections.css
src/static/css/pinduoduo/: course_program.css  included_in_course.css  price.css  price_comparison.css  sign_up_form.css
src/static/css/taobao/: course_program.css  included_in_course.css  price.css  price_comparison.css  sign_up_form.css
src/static/js/: consultation_form.js  courses.js
src/static/js/taobao/: sign_up_form.js
src/static/seo/: robots.txt  sitemap.xml
src/templates/: index.html  pinduoduo.html  taobao.html
src/templates/partials/: header.html
static/: scripts.js
static/css/: about.css  about_me.css  china_study.css  consultation_form.css  footer.css  header.css  home.css  reviews.css  sections.css
static/css/common/: footer.css  header.css
static/css/pinduoduo/: included_in_course.css  price_comparison.css  sign_up_form.css
static/css/taobao/: course_program.css  included_in_course.css  price.css  price_comparison.css  sign_up_form.css
static/js/: about.js  consultation_form.js  courses.js  header.js  reviews.js
static/js/pinduoduo/: course_program.js  sign_up_form.js
static/js/taobao/: course_program.js  sign_up_form.js
templates/: index.html  pinduoduo.html  taobao.html
templates/partials/: footer.html  header.html  sign_up_form.html
